--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,5 +21,12 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "warn",
+            {
+                "argsIgnorePattern": "^_"
+            }
+        ]
     }
 }
