--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "ngrxplant",
   "version": "0.0.1",
   "description": "NGRX to PlantUML",
-  "main": "dist/index.js",
+  "main": "./dist/bin/index.js",
   "bin": {
-    "ngrxplant": "dist/index.js"
+    "ngrxplant": "./dist/bin/index.js"
   },
   "scripts": {
     "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node ./dist",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "quickstart": "node ./dist",
-    "lint": "eslint . --ext .ts"
+    "start:test": "node ./dist/bin -f 'test/test-files/**/*ts'",
+    "start": "ts-node ./bin ",
+    "test": "jest",
+    "lint": "eslint . --ext .ts",
+    "run:diagram": "ts-node ./bin diagram -f 'test/test-files/**/*ts'",
+    "run:diagram:ngrx": "ts-node ./bin diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -c tsconfig.app.json",
+    "run:print": "ts-node ./bin print -f 'test/test-files/**/*ts'"
   },
   "keywords": [
     "ngrx",
@@ -24,12 +26,17 @@
   "author": "immament",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.0.0",
     "glob": "^7.1.6",
+    "loglevel": "^1.6.8",
+    "plantuml-encoder": "^1.4.0",
+    "tsutils": "^3.17.1",
     "typescript": "^3.8.3",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
+    "@types/jest": "^25.2.1",
     "@types/node": "^13.11.1",
     "@types/yargs": "^15.0.4",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
@@ -39,6 +46,9 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "jest": "^25.3.0",
+    "ts-jest": "^25.4.0",
+    "ts-node": "^8.8.2"
   }
 }
