--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ngrxplant",
+  "name": "ngrx-uml",
   "version": "0.0.1",
   "description": "NGRX to PlantUML",
   "main": "./dist/bin/index.js",
   "bin": {
-    "ngrxplant": "./dist/bin/index.js"
+    "ngrx-uml": "./dist/bin/index.js"
   },
   "scripts": {
     "build": "tsc",
@@ -18,6 +18,7 @@
   },
   "keywords": [
     "ngrx",
+    "actions",
     "state",
     "plant",
     "UML",
