--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,22 @@
 {
     "eslint.enable": true,
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#373737",
-        "activityBar.activeBorder": "#787828",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#787828",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "statusBar.border": "#1e1e1e",
-        "statusBarItem.hoverBackground": "#373737",
-        "titleBar.border": "#1e1e1e",
-        "titleBar.inactiveBackground": "#1e1e1e99",
-        "titleBar.inactiveForeground": "#e7e7e799"
-    },
-    "peacock.color": "#1e1e1e"
+        "[Default Dark+]": {
+            "statusBar.background": "#486357",
+            "statusBar.foreground": "#c8e9c5",
+            "activityBar.background": "#486357",
+            "activityBar.activeBackground": "#2f7c47",
+            "activityBar.activeBorder": "#422c74",
+            "activityBar.inactiveForeground": "#e7e7e799",
+            "activityBarBadge.background": "#422c74",
+            "activityBarBadge.foreground": "#e7e7e7",
+            "statusBar.border": "#215732",
+            "statusBarItem.hoverBackground": "#2f7c47",
+            "titleBar.activeBackground": "#215732",
+            "titleBar.activeForeground": "#e7e7e7",
+            "titleBar.border": "#215732",
+            "titleBar.inactiveBackground": "#21573299",
+            "titleBar.inactiveForeground": "#e7e7e799"
+        }
+    }
 }
