--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:test": "node ./dist/bin -f 'test/test-files/**/*ts'",
     "start": "ts-node ./bin ",
     "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "eslint . --ext .ts",
     "run:diagram": "ts-node ./bin diagram -f 'test/test-files/**/*ts'",
     "run:diagram:ngrx": "ts-node ./bin diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -c tsconfig.app.json",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/glob": "^7.1.1",
     "@types/jest": "^25.2.1",
+    "@types/jest-expect-message": "^1.0.1",
     "@types/node": "^13.11.1",
     "@types/yargs": "^15.0.4",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
@@ -49,6 +51,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^25.3.0",
+    "jest-expect-message": "^1.0.2",
     "ts-jest": "^25.4.0",
     "ts-node": "^8.8.2"
   }
