--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "glob": "^7.1.6",
     "loglevel": "^1.6.8",
     "plantuml-encoder": "^1.4.0",
+    "rxjs": "^6.5.5",
     "tsutils": "^3.17.1",
     "typescript": "^3.8.3",
     "yargs": "^15.3.1"
