--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:watch": "jest --watch",
     "lint": "eslint . --ext .ts",
     "run:diagram": "ts-node ./bin diagram -f 'test/test_data/**/*ts'",
-    "run:diagram:ngrx": "ts-node ./bin diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -c tsconfig.app.json",
+    "run:diagram:ngrx": "ts-node ./bin diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -i '../**/*.spec.ts' -c tsconfig.app.json",
     "run:print": "ts-node ./bin print -f 'test/test-files/**/*ts'"
   },
   "keywords": [
