--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
       "./node_modules/@types",
       "./src/@types"
     ],
-    "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+    "esModuleInterop": true, /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+    "declaration": true,
   },
   "include": [
     "src/**/*",
