--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "ngrx-uml",
   "version": "0.0.1",
   "description": "NGRX to PlantUML",
-  "main": "dist/src/index.js",
-  "typings": "dist/src/index.d.ts",
+  "main": "dist/lib/index.js",
+  "typings": "dist/lib/index.d.ts",
   "bin": {
     "ngrx-uml": "./dist/bin/index.js"
   },
@@ -14,9 +14,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint . --ext .ts",
-    "run:diagram": "ts-node ./bin diagram -f 'test/test_data/**/*ts'",
-    "run:diagram:ngrx": "ts-node ./bin diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -i '../**/*.spec.ts' -c tsconfig.app.json",
-    "run:print": "ts-node ./bin print -f 'test/test-files/**/*ts'"
+    "run:diagram": "ts-node ./src/bin diagram -f 'test/test_data/**/*ts'",
+    "run:diagram:ngrx": "ts-node ./src/bin diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -i '../**/*.spec.ts' -c tsconfig.app.json",
+    "run:print": "ts-node ./src/bin print -f 'test/test-files/**/*ts'"
   },
   "keywords": [
     "ngrx",
