--- a/examples/example-app/tsconfig.json
+++ b/examples/example-app/tsconfig.json
@@ -11,14 +11,13 @@
     "strict": true, /* Enable all strict type-checking options. */
     "typeRoots": [
       "./node_modules/@types",
-      "./src/@types"
     ],
     "esModuleInterop": true, /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
-    "declaration": true
+    "declaration": true,
+    "moduleResolution": "node"
   },
   "include": [
     "src/**/*",
-    "src/bin/**/*"
   ],
   "exclude": [
     "node_modules",
