--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "run:diagram:ngrx": "ts-node ./src/bin diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -i '../**/*.spec.ts' -c tsconfig.app.json",
     "run:print": "ts-node ./src/bin print -f 'test/test-files/**/*ts'",
     "prepublishOnly": "npm run lint && npm run build && npm test",
-    "deploy": "npm publish"
+    "deployLocal": "npm run build && npm i -g ."
   },
   "keywords": [
     "ngrx",
