--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
   "scripts": {
     "setup": "npm install",
     "build": "tsc --declaration",
+    "dev": "tsc --watch",
     "start": "ts-node ./src/bin ",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint . --ext .ts",
     "run:diagram": "ts-node ./src/bin diagram -f 'test/test_data/**/*ts'",
     "run:d": "ts-node ./src/bin diagram -f 'test/test_data/**/books*ts'",
-    "run:diagram:ngrx": "ts-node ./src/bin diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -i '../**/*.spec.ts' -c tsconfig.app.json",
+    "run:diagram:ngrx": "ts-node ./src/bin diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -i '../**/*.spec.ts' -c tsconfig.json --js",
     "run:print": "ts-node ./src/bin print -f 'test/test-files/**/*ts'",
     "prepublishOnly": "npm run lint && npm run build && npm test",
     "deployLocal": "npm run build && npm i -g ."
