--- a/examples/example-app/package.json
+++ b/examples/example-app/package.json
@@ -5,13 +5,15 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc ",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "dev": "tsc --watch",
+    "reinstall-ngrx": "npm i ../.."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^13.13.2",
-    "ts-node": "^8.9.1",
+    "@types/node": "^13.13.5",
+    "ts-node": "^8.10.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
