--- a/examples/example-app-npm/package.json
+++ b/examples/example-app-npm/package.json
@@ -5,7 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/index.ts"
+    "dev": "tsc --watch",
+    "start": "ts-node src/index.ts",
+    "copy-from-examle-app": "cp ../example-app/src/**.ts ./src"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +17,6 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "ngrx-uml": "^0.1.4"
+    "ngrx-uml": "^1.0.0"
   }
 }
