--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint": "eslint . --ext .ts",
     "run:diagram": "ts-node ./src/bin diagram -f 'test/test_data/**/*ts'",
     "run:d": "ts-node ./src/bin diagram -f 'test/test_data/**/books*ts'",
-    "run:diagram:ngrx": "ts-node ./src/bin diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -i '../**/*.spec.ts' -c tsconfig.json --js",
+    "run:diagram:ngrx": "ts-node ./src/bin diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -i '../**/*.spec.ts' -c tsconfig.app.json --js",
     "run:print": "ts-node ./src/bin print -f 'test/test-files/**/*ts'",
     "prepublishOnly": "npm run lint && npm run build && npm test",
     "deployLocal": "npm run build && npm i -g ."
