--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,13 +18,9 @@
     "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
     "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
     "noUnusedParameters": true, /* Report errors on unused parameters. */
-    "rootDirs": [
-      "src",
-      "tests"
-    ]
   },
   "include": [
-    "src/**/*", "test"
+    "src/**/*" 
   ],
   "exclude": [
     "node_modules",
