--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "run:diagram": "ts-node ./src/bin diagram -f 'test/test_data/**/*ts'",
     "run:d": "ts-node ./src/bin diagram -f 'test/test_data/**/books*ts'",
     "run:diagram:ngrx": "ts-node ./src/bin diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -i '**/*.spec.ts' -c tsconfig.app.json --js",
+    "json:diagram:ngrx": "npm run run:diagram:ngrx -- --im off",
     "run:print": "ts-node ./src/bin print -f 'test/test-files/**/*ts'",
     "prepublishOnly": "npm run lint && npm run build && npm test",
     "deployLocal": "npm run build && npm i -g .",
-    "sb": "ts-node ./src/bin di sandbox  -f '**/*ts' -d ../ngrx/projects/example-app/ -i '**/*.spec.ts' -c tsconfig.app.json --js",
+    "sb": "ts-node ./src/bin di sandbox  -f '**/*ts' -d ../ngrx/projects/example-app/ -i '**/*.spec.ts' -c tsconfig.app.json --js -o '../ngrx/projects/example-app/out'",
     "sb-cp": "ts-node ./src/bin di sandbox -f 'src/app/**/*.module.ts' -d ../ChampionPath/champ-app --js"
   },
   "keywords": [
