fix: problems with import actions without alias #6

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,12 +20,12 @@
     "noUnusedParameters": true, /* Report errors on unused parameters. */
   },
   "include": [
-    "src/**/*" 
+    "src/**/*",
+    "test/**/*"
   ],
   "exclude": [
     "node_modules",
     "dist",
     "**/*_data/*",
-    "**/*.spec.ts"
   ]
 }
