--- a/package.json
+++ b/package.json
@@ -17,21 +17,22 @@
   },
   "scripts": {
     "setup": "npm install",
-    "build": "tsc --declaration",
+    "build": "tsc -p tsconfig.app.json --declaration",
     "dev": "tsc --watch",
-    "start": "ts-node ./src/bin ",
+    "ts-node": "ts-node",
+    "start": "ts-node -P tsconfig.app.json ./src/bin ",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint . --ext .ts",
-    "run:diagram": "ts-node ./src/bin diagram -f 'test/test_data/**/*ts'",
-    "run:d": "ts-node ./src/bin diagram -f 'test/test_data/**/books*ts'",
-    "run:diagram:ngrx": "ts-node ./src/bin diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -i '**/*.spec.ts' -c tsconfig.app.json --js",
+    "run:diagram": "npm start -- diagram -f 'test/test_data/**/*ts'",
+    "run:d": "npm start -- diagram -f 'test/test_data/**/books*ts'",
+    "run:diagram:ngrx": "npm start -- diagram -f '**/*ts' -d ../ngrx/projects/example-app/ -i '**/*.spec.ts' -c tsconfig.app.json --js",
     "json:diagram:ngrx": "npm run run:diagram:ngrx -- --im off",
-    "run:print": "ts-node ./src/bin print -f 'test/test-files/**/*ts'",
+    "run:print": "npm start -- print -f 'test/test-files/**/*ts'",
     "prepublishOnly": "npm run lint && npm run build && npm test",
     "deployLocal": "npm run build && npm i -g .",
-    "sb": "ts-node ./src/bin di sandbox  -f '**/*ts' -d ../ngrx/projects/example-app/ -i '**/*.spec.ts' -c tsconfig.app.json --js",
-    "sb-cp": "ts-node ./src/bin di sandbox -f 'src/app/**/*.module.ts' -d ../ChampionPath/champ-app --js"
+    "sb": "npm start -- di sandbox  -f '**/*ts' -d ../ngrx/projects/example-app/ -i '**/*.spec.ts' -c tsconfig.app.json --js",
+    "sb-cp": "npm start -- di sandbox -f 'src/app/**/*.module.ts' -d ../ChampionPath/champ-app --js"
   },
   "keywords": [
     "ngrx",
